--- a/style.css
+++ b/style.css
@@ -1,69 +1,64 @@
-<html>
-
-   
-<title> CV </title>
-
-</head>
-
-<body>
-f 
-
 body {
-     background-color:#cccccc;
-
-     
+     background-color: #cccccc
+     margin: 0;
  }
+
+.test {
+    border: 4px solid red;
+    margin: 2px;
+}
 
 h1 {
     text-align: center;
-    color:darkblue;
+    color: darkblue;
 }           
-tr { 
-    padding: 5px
+td { 
+    padding: 4px;
 }
 #summary {
-    color: #3355ff;
+    color: #538020;
+    margin: 0 5px 5px 5px;
+}
+
+#sidebar-left {
+    float: left;
+    width : 200px;
+}
+#content {
+    padding-left: 210px;
 }
 
 .page { 
-    background: #ffffcc;
+    background: #fff;
     padding: 10px;
     border: 1px solid #555555;
-    margin-bottom: 5px;
-    margin: 0 5px 0.2em; 
+    margin: 0 5px 5px 5px; 
     display: none;
 }
-#sidebar-left {
-    float: left;
-    width: 200px;
-}
-
-.content {
-    padding-left: 250px;
-}
 h2 {
-    margin: 0.2em;
+    margin: 0.2em 0 0.2em 0;
 }
-
-#top-menu-bar  {
-    text-align:center;
-    background-color:#2687e9;
-    color:#fff;
-
+#top-menu-bar {
+    text-align: center;
+    background-color: #334455;
+    color: white;
 }
-
 #top-menu-bar li {
-    display:inline; margin:0;
-    padding:0;
+    display: inline; 
+    margin: 0;
+    padding: 0;
 }
 #top-menu-bar a {
+    color: white;
+    padding: 5px 15px 5px 15px;
     text-decoration: none;
-    padding: 0 15px 0 15px;
-    color: rgb(94, 80, 80);
+    display: inline-block;
 }
-#top-menu-bar a:visited {color: rgb(212, 36, 36);}
 #top-menu-bar a:hover {
-    color: #334455; background: rgb(180, 178, 178);
+    color: #334455; 
+    background-color: white
 }
 
-</head>
+.endorsement {
+    color: gray;
+}
